# sirhosp

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .markdownlintignore  AGENTS.md  Dockerfile  PROJECT_CONTEXT.md  README.md  compose.dev.yml  compose.prod.yml  compose.test.yml  compose.yml  debug_data.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: quality-gate.yml
.ralph/: fix-patient-badges.md
apps/admissions/: __init__.py  apps.py  models.py  services.py
apps/census/: admin.py  apps.py  flow_service.py  models.py  orchestration.py  services.py  urls.py  views.py
apps/clinical_docs/: apps.py  models.py
apps/core/: context_processors.py  profession_types.py  views.py
apps/deaths/: __init__.py  apps.py  models.py  services.py
apps/patients/: urls.py  (+4 more)
automation/: README.md
config/: gunicorn.conf.py  settings.py  test_settings.py  urls.py
deploy/: README.md  census-scheduler.sh  discharges-scheduler.sh
docker/: entrypoint.sh  gunicorn-wrapper.sh
docs/: architecture.md  dev-tailscale.md
openspec/: config.yaml
research/: estatisticas-hospitalares-censo-ms-leitos.md
scripts/: container-smoke.sh  export-census-snapshot.sh  fix_prontuario_float.py  markdown-format.sh  markdown-lint.sh  recover-historical-data.sh  requeue-latest-open-ingestion-batch.sh  smoke-vpn-connectivity.sh  test-in-container.sh
templates/: base.html  base_sidebar.html
tests/: __init__.py
wireframes/: busca-historico.md  busca-setores.md  busca-termos-riscos.md  dashboard.md  detalhes-paciente.md
(+720 files in other folders)
